tests/lean/invalidEnd.lean
namespace Foo.Bar
section Baz
section

end Baz
end
end Bal
end Baz
end Fool.Bar
end
